v<0.0.1>, <10/23/2024> -- initial release.
v<0.0.2>, <10/23/2024> -- style: lint and pep8.
v<0.0.2>, <10/23/2024> -- docs: links for README.
v<0.0.2>, <10/23/2024> -- test: disable tests.
v<0.0.2>, <10/24/2024> -- chore: move to action pypi publish task.
v<0.0.2>, <10/24/2024> -- chore: add urls to pyproject file.
v<0.0.2>, <10/24/2024> -- docs: simplify jargon and make more visually readable.
v<0.0.2>, <10/24/2024> -- refactor: clean notebooks of long cell outputs.
v<0.0.2>, <10/27/2024> -- docs: add logo and pipeline images to README.
v<0.0.2>, <10/29/2024> -- docs: add changelog.
v<0.0.2>, <10/29/2024> -- chore: add automated release using changelog.
v<0.0.3>, <11/17/2024> -- fix: automated release generation
v<0.0.3>, <11/17/2024> -- feat: add max retries arg to openai encoder
v<0.0.3>, <11/17/2024> -- feat: add client initialization to cohere encoder
v<0.0.3>, <11/17/2024> -- feat: add mistral and voyageai encoders
v<0.0.4>, <11/24/2024> -- chore: removed huggingface-hub, torch, transformers, and tokenizers from core dependencies
v<0.0.4>, <11/24/2024> -- refactor: improve package initialization with conditional imports for type checking
v<0.0.4>, <11/24/2024> -- fix: missing typing Any import on cohere, mistral, and voyageai
v<0.0.4>, <11/24/2024> -- fix: missing time sleep import on mistral